Aggiornato il file package.json, data la rimozione della cartella node_modules dal repository.

--- a/id3kingserver/package.json
+++ b/id3kingserver/package.json
@@ -10,6 +10,12 @@
   "license": "ISC",
   "dependencies": {
     "hapi": "^13.4.1",
-    "request-promise": "^4.1.0"
+    "request-promise": "^4.1.0",
+    "cron": "*",
+    "sqlite3": "*",
+    "inert": "*",
+    "cheerio": "*",
+    "request": "*",
+    "q": "*"
   }
 }
