--- a/package.json
+++ b/package.json
@@ -3,19 +3,17 @@
   "version": "1.0.0",
   "description": "id3KingServer, written in nodejs with <3",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "scripts": {},
   "author": "Luxor001",
   "license": "ISC",
   "dependencies": {
-    "hapi": "^13.4.1",
+    "cheerio": "0.22.0",
+    "cron": "1.2.1",
+    "hapi": "16.3.0",
+    "inert": "4.2.0",
+    "q": "1.5.0",
+    "request": "2.81.0",
     "request-promise": "^4.1.0",
-    "cron": "*",
-    "sqlite3": "*",
-    "inert": "*",
-    "cheerio": "*",
-    "request": "*",
-    "q": "*"
+    "sqlite3": "^5.0.2"
   }
 }
